fixed layout issues

--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -86,5 +86,7 @@
   .imageSake {
     display: block;
     margin-top: -20px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
   }
 }
